finish file upload
